--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dynamic = ["version"]
 description = "Python library to interact with DefectDojo - generated from OpenAPI"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = ["pydantic>= 2", "python-dateutil>= 2.8.2"]
 
 [project.urls]
 Homepage = "https://github.com/fopina/defectdojo-api-generated"
@@ -41,6 +41,7 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
 "defectdojo_api_generated/*" = ["E402"]
+"defectdojo_api_generated/api_client.py" = ["E721"]
 
 [tool.ruff.format]
 quote-style = "single"
