--- a/.github/workflows/publish-dev.yml
+++ b/.github/workflows/publish-dev.yml
@@ -14,5 +14,5 @@ jobs:
       version: '${{ github.run_number }}.0.0'
       repository: testpypi
     secrets:
-      twine_username: ${{ secrets.TESTPYPI_USERNAME }}
+      twine_username: __token__
       twine_password: ${{ secrets.TESTPYPI_TOKEN }}
