--- a/.github/workflows/publish-main.yml
+++ b/.github/workflows/publish-main.yml
@@ -12,5 +12,5 @@ jobs:
       # so easy to forget bumping the version to match the tag, just override it!
       version: ${{ github.ref_name }}
     secrets:
-      twine_username: ${{ secrets.PYPI_USERNAME }}
+      twine_username: __token__
       twine_password: ${{ secrets.PYPI_TOKEN }}
