improve test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ on:
       - dev-*
 
 jobs:
-  tests:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,11 +28,25 @@ jobs:
           pip install -r reqs.txt
 
       - name: Lint check
-        id: lint-check
-        # allow unit tests to run even if this fails
-        continue-on-error: true
         run: |
           make lint-check
+
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          pip install pipenv
+          pipenv requirements --dev > reqs.txt
+          pip install -r reqs.txt
 
       - name: Run unit tests
         run: |
@@ -45,8 +59,23 @@ jobs:
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
 
-      - name: Final check
-        if: ${{ steps.lint-check.outcome == 'failure' }}
+  integration-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
         run: |
-          echo Lint check failed, check its log
-          exit 1
+          pip install pipenv
+          pipenv requirements --dev > reqs.txt
+          pip install -r reqs.txt
+
+      - name: Run unit tests
+        run: |
+          python example.py
