--- a/Pipfile
+++ b/Pipfile
@@ -3,7 +3,6 @@
 pydantic = ">= 2"
 # as required by generator
 python-dateutil = ">= 2.8.2"
-lazy-import = "*"
 
 [dev-packages]
 ruff = "*"
@@ -15,4 +14,4 @@ pyproject-pipenv = "*"
 pytest-socket = "*"
 
 [requires]
-python_version = "3.10"
+python_version = ">=3.10"
