--- a/support/api_generation/config.yaml
+++ b/support/api_generation/config.yaml
@@ -1,7 +1,11 @@
+generatorName: python
 templateDir: local/support/api_generation/templates.spec
 additionalProperties:
   generateSourceCodeOnly: true
   packageName: defectdojo_api_generated
+globalProperties:
+  modelDocs: false
+  apiDocs: false
 files:
   client.mustache:
     folder: defectdojo_api_generated
