--- a/support/api_generation/config.yaml
+++ b/support/api_generation/config.yaml
@@ -1,8 +1,10 @@
 generatorName: python
-templateDir: local/support/api_generation/templates.spec
+templateDir: support/api_generation/custom_templates
 additionalProperties:
   generateSourceCodeOnly: true
   packageName: defectdojo_api_generated
+  packageUrl: https://github.com/fopina/defectdojo-api-generated
+  projectName: defectdojo-api-generated
 globalProperties:
   modelDocs: false
   apiDocs: false
