--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dynamic = ["version"]
 description = "Python library to interact with DefectDojo - generated from OpenAPI"
 readme = "README.md"
 requires-python = ">=3.9,<4"
-dependencies = ["pydantic>= 2", "python-dateutil>= 2.8.2"]
+dependencies = ["pydantic>= 2", "python-dateutil>= 2.8.2", "urllib3>= 2.1.0, < 3.0.0", "typing-extensions>= 4.7.1"]
 
 [project.urls]
 Homepage = "https://github.com/fopina/defectdojo-api-generated"
